BuildHughes/translation-tool/inputs/source_meta/objects/Hsvc_ActivityType__c.object
<CustomObject>
    <description>Represents an Activity Type related to case. This object is managed by business admin to store the Activity Type values.</description>
    <fields>
        <fullName>Active__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines whether this record is active</description>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ActivityCode__c</fullName>
        <description>The unique external Id for identifying Activity Codes</description>
        <label>Activity Code</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Code_Portuguese__c</fullName>
        <label>Activity Code(Portuguese)</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Name_Formula__c</fullName>
        <description>Based on the current language, the activity name is either the spanish name or the english name. If the spanish name is blank, then show english name</description>
        <formula>CASE($Label.Current_Language_Key,&apos;es_CO&apos;, IF(ISBLANK(Activity_Name_Spanish__c), Name,Activity_Name_Spanish__c) ,&apos;es_PA&apos;, IF(ISBLANK(Hsvc_ActivityNamePanama__c), Name,Hsvc_ActivityNamePanama__c),&apos;es_PE&apos;, IF(ISBLANK(Hsvc_ActivityNamePeru__c), Name,Hsvc_ActivityNamePeru__c), &apos;es_EC&apos;, IF(ISBLANK(Hsvc_ActivityNameEcuador__c), Name,Hsvc_ActivityNameEcuador__c), &apos;es_CL&apos;, IF(ISBLANK(Hsvc_ActivityNameChile__c), Name,Hsvc_ActivityNameChile__c),&apos;es_AR&apos;, IF(ISBLANK(Hsvc_ActivityNameArgentina__c), Name,Hsvc_ActivityNameArgentina__c), Name)</formula>
        <label>Activity Type Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Name_Portuguese__c</fullName>
        <label>Activity Name(Portuguese)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Activity_Name_Spanish__c</fullName>
        <description>Spanish value for Activity Name</description>
        <label>Activity Name(Colombia)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AvailableToUser__c</fullName>
        <defaultValue>false</defaultValue>
        <description>The checkbox field which holds the information if Activity Type should be available for User to select on the Case. This flag is defined for to make users not be able to select the inbound Activity type</description>
        <label>Available To User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>The description of the Activity Type selected for the record</description>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>HSvc_Active__c</fullName>
        <formula>IF( HSvc_ExpiryDate__c  &lt;  TODAY() , False, True)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>HSvc_Country__c</fullName>
        <label>Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>HSvc_EffectiveDate__c</fullName>
        <defaultValue>today()</defaultValue>
        <label>Effective Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>HSvc_ExpiryDate__c</fullName>
        <label>Expiry Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
	<fields>
        <fullName>Hsvc_ActivityNameArgentina__c</fullName>
        <label>Activity Name(Argentina)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ActivityNameChile__c</fullName>
        <label>Activity Name(Chile)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ActivityNameEcuador__c</fullName>
        <label>Activity Name(Ecuador)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ActivityNamePanama__c</fullName>
        <label>Activity Name(Panama)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Hsvc_ActivityNamePeru__c</fullName>
        <label>Activity Name(Peru)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Internal__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If checked then this activity type will not be displayed in community</description>
        <label>Internal</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RecordType__c</fullName>
        <label>Record Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>B2B General Case</fullName>
                </value>
                <value>
                    <fullName>B2C General Case</fullName>
                </value>
                <value>
                    <fullName>Repair Work Order</fullName>
                </value>
                <value>
                    <fullName>Install Work Order</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Office Only</fullName>
                </value>
                <value>
                    <fullName>Business Support Case</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>isActive__c</fullName>
        <description>is active will be true if activity type is not expired yet</description>
        <formula>IF(HSvc_EffectiveDate__c &lt;= TODAY() &amp;&amp; TODAY() &lt;=  HSvc_ExpiryDate__c, true, false)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <label>Activity Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>RecordType__c</columns>
        <columns>ActivityCode__c</columns>
        <columns>NAME</columns>
        <columns>Description__c</columns>
        <columns>AvailableToUser__c</columns>
        <columns>HSvc_EffectiveDate__c</columns>
        <columns>HSvc_ExpiryDate__c</columns>
        <columns>HSvc_Active__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Activity Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Activity Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>HSvc_ActivityCodeRequired</fullName>
        <active>true</active>
        <errorConditionFormula>ActivityCode__c   =  Null</errorConditionFormula>
        <errorDisplayField>ActivityCode__c</errorDisplayField>
        <errorMessage>Field cannot be left blank</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HSvc_CannotChangeActivityCode</fullName>
        <active>true</active>
        <description>Once Activity Code is defined, it should not be allowed to change</description>
        <errorConditionFormula>ISCHANGED( ActivityCode__c )</errorConditionFormula>
        <errorDisplayField>ActivityCode__c</errorDisplayField>
        <errorMessage>Activity Code cannot be changed</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>HSvc_ExpiryDateCannotBeSetUpInPast</fullName>
        <active>true</active>
        <errorConditionFormula>OR(HSvc_ExpiryDate__c &lt; TODAY(),HSvc_ExpiryDate__c &lt; HSvc_EffectiveDate__c)</errorConditionFormula>
        <errorDisplayField>HSvc_ExpiryDate__c</errorDisplayField>
        <errorMessage>Expiry Date cannot be set in past and cannot be less than the effective date</errorMessage>
    </validationRules>
</CustomObject>